Made background transparent

--- a/server/fivem-resource/ui/styles.css
+++ b/server/fivem-resource/ui/styles.css
@@ -610,7 +610,7 @@ select {
   object-position: top;
   border-radius: 10px;
   border: 1px solid #bad5c5;
-  background: #ffffff;
+  background: transparent;
 }
 
 .id-card-fields {
